# 3D_SDL

./: CMakeLists.txt
src/: 3DR.h  3DRlinalg.c  cube.c  gfx.c  shapes.h  sierpinski.c
